--- a/ocserv.conf
+++ b/ocserv.conf
@@ -3,15 +3,16 @@ auth = "certificate"
 tcp-port = 8443
 udp-port = 8443
 
-server-cert = /etc/v2ray/wy_cer.pem
-server-key = /etc/v2ray/wy_key.pem
-ca-cert = /etc/v2ray/ca_cer.pem
+server-cert = /etc/ocserv/wy_cer.pem
+server-key = /etc/ocserv/wy_key.pem
+ca-cert = /etc/ocserv/ca_cer.pem
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
 run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
+cert-group-oid = 2.5.4.11
 isolate-workers = false
 max-clients = 256
 max-same-clients = 12
