--- a/ocserv.conf
+++ b/ocserv.conf
@@ -3,8 +3,8 @@ auth = "certificate"
 tcp-port = 8443
 udp-port = 8443
 
-server-cert = /etc/ocserv/wy_cer.pem
-server-key = /etc/ocserv/wy_key.pem
+server-cert = /etc/ocserv/oc_serv_cer.pem
+server-key = /etc/ocserv/oc_serv_key.pem
 ca-cert = /etc/ocserv/ca_cer.pem
 
 socket-file = /var/run/ocserv-socket
