--- a/ocserv.conf
+++ b/ocserv.conf
@@ -40,6 +40,7 @@ cisco-client-compat = true
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
+tunnel-all-dns = false
 dns = 202.141.162.123
 dns = 202.141.178.13
 
