--- a/ocserv.conf
+++ b/ocserv.conf
@@ -19,7 +19,8 @@ max-same-clients = 12
 keepalive = 32400
 dpd = 30
 mobile-dpd = 120
-#output-buffer = 1000
+output-buffer = 23000
+# test
 try-mtu-discovery = true
 compression = true
 no-compress-limit = 256
@@ -40,9 +41,13 @@ cisco-client-compat = true
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
-tunnel-all-dns = true
-dns = 8.8.8.8
-dns = 8.8.4.4
+# test
+#tunnel-all-dns = true
+#dns = 8.8.8.8
+#dns = 8.8.4.4
+tunnel-all-dns = false
+dns = 202.141.162.123
+dns = 202.141.178.13
 
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
