--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,7 +17,7 @@ isolate-workers = false
 max-clients = 256
 max-same-clients = 12
 keepalive = 32400
-dpd = 30
+dpd = 90
 mobile-dpd = 120
 output-buffer = 23000
 # test
@@ -42,12 +42,9 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
 # test
-#tunnel-all-dns = true
-#dns = 8.8.8.8
-#dns = 8.8.4.4
-tunnel-all-dns = false
-dns = 202.141.162.123
-dns = 202.141.178.13
+tunnel-all-dns = true
+dns = 8.8.8.8
+dns = 8.8.4.4
 
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
