--- a/ocserv.conf
+++ b/ocserv.conf
@@ -19,8 +19,7 @@ max-same-clients = 12
 keepalive = 32400
 dpd = 90
 mobile-dpd = 120
-output-buffer = 23000
-# test
+#output-buffer = 23000
 try-mtu-discovery = true
 compression = true
 no-compress-limit = 256
@@ -41,7 +40,7 @@ cisco-client-compat = true
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
-# test
+
 tunnel-all-dns = true
 dns = 8.8.8.8
 dns = 8.8.4.4
