--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 8443
-udp-port = 8443
+#udp-port = 8443
 
 server-cert = /etc/ocserv/oc_serv_cer.pem
 server-key = /etc/ocserv/oc_serv_key.pem
@@ -13,15 +13,15 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 cert-group-oid = 2.5.4.11
-isolate-workers = false
-max-clients = 256
-max-same-clients = 12
+isolate-workers = true
+max-clients = 25
+max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 120
 #output-buffer = 23000
 try-mtu-discovery = true
-compression = true
+compression = false
 no-compress-limit = 256
 auth-timeout = 40 
 idle-timeout = 1200
@@ -45,201 +45,45 @@ tunnel-all-dns = true
 dns = 8.8.8.8
 dns = 8.8.4.4
 
-no-route = 1.0.0.0/255.192.0.0
-no-route = 1.64.0.0/255.224.0.0
-no-route = 1.112.0.0/255.248.0.0
-no-route = 1.176.0.0/255.240.0.0
-no-route = 1.192.0.0/255.240.0.0
-no-route = 14.0.0.0/255.224.0.0
-no-route = 14.96.0.0/255.224.0.0
-no-route = 14.128.0.0/255.224.0.0
-no-route = 14.192.0.0/255.224.0.0
-no-route = 27.0.0.0/255.192.0.0
-no-route = 27.96.0.0/255.224.0.0
-no-route = 27.128.0.0/255.224.0.0
-no-route = 27.176.0.0/255.240.0.0
-no-route = 27.192.0.0/255.224.0.0
-no-route = 27.224.0.0/255.252.0.0
-no-route = 36.0.0.0/255.192.0.0
-no-route = 36.96.0.0/255.224.0.0
-no-route = 36.128.0.0/255.192.0.0
-no-route = 36.192.0.0/255.224.0.0
-no-route = 36.240.0.0/255.240.0.0
-no-route = 39.0.0.0/255.255.0.0
-no-route = 39.64.0.0/255.224.0.0
-no-route = 39.96.0.0/255.240.0.0
-no-route = 39.128.0.0/255.192.0.0
-no-route = 40.72.0.0/255.254.0.0
-no-route = 40.124.0.0/255.252.0.0
-no-route = 42.0.0.0/255.248.0.0
-no-route = 42.48.0.0/255.240.0.0
-no-route = 42.80.0.0/255.240.0.0
-no-route = 42.96.0.0/255.224.0.0
-no-route = 42.128.0.0/255.128.0.0
-no-route = 43.224.0.0/255.224.0.0
-no-route = 45.65.16.0/255.255.240.0
-no-route = 45.112.0.0/255.240.0.0
-no-route = 45.248.0.0/255.248.0.0
-no-route = 47.92.0.0/255.252.0.0
-no-route = 47.96.0.0/255.224.0.0
-no-route = 49.0.0.0/255.128.0.0
-no-route = 49.128.0.0/255.224.0.0
-no-route = 49.192.0.0/255.192.0.0
-no-route = 52.80.0.0/255.252.0.0
-no-route = 54.222.0.0/255.254.0.0
-no-route = 58.0.0.0/255.128.0.0
-no-route = 58.128.0.0/255.224.0.0
-no-route = 58.192.0.0/255.224.0.0
-no-route = 58.240.0.0/255.240.0.0
-no-route = 59.32.0.0/255.224.0.0
-no-route = 59.64.0.0/255.224.0.0
-no-route = 59.96.0.0/255.240.0.0
-no-route = 59.144.0.0/255.240.0.0
-no-route = 59.160.0.0/255.224.0.0
-no-route = 59.192.0.0/255.192.0.0
-no-route = 60.0.0.0/255.224.0.0
-no-route = 60.48.0.0/255.240.0.0
-no-route = 60.160.0.0/255.224.0.0
-no-route = 60.192.0.0/255.192.0.0
-no-route = 61.0.0.0/255.192.0.0
-no-route = 61.80.0.0/255.248.0.0
-no-route = 61.128.0.0/255.192.0.0
-no-route = 61.224.0.0/255.224.0.0
-no-route = 91.234.36.0/255.255.255.0
-no-route = 101.0.0.0/255.128.0.0
-no-route = 101.128.0.0/255.224.0.0
-no-route = 101.192.0.0/255.240.0.0
-no-route = 101.224.0.0/255.224.0.0
-no-route = 103.0.0.0/255.0.0.0
-no-route = 106.0.0.0/255.128.0.0
-no-route = 106.224.0.0/255.240.0.0
-no-route = 110.0.0.0/255.128.0.0
-no-route = 110.144.0.0/255.240.0.0
-no-route = 110.160.0.0/255.224.0.0
-no-route = 110.192.0.0/255.192.0.0
-no-route = 111.0.0.0/255.192.0.0
-no-route = 111.64.0.0/255.224.0.0
-no-route = 111.112.0.0/255.240.0.0
-no-route = 111.128.0.0/255.192.0.0
-no-route = 111.192.0.0/255.224.0.0
-no-route = 111.224.0.0/255.240.0.0
-no-route = 112.0.0.0/255.128.0.0
-no-route = 112.128.0.0/255.240.0.0
-no-route = 112.192.0.0/255.252.0.0
-no-route = 112.224.0.0/255.224.0.0
-no-route = 113.0.0.0/255.128.0.0
-no-route = 113.128.0.0/255.240.0.0
-no-route = 113.192.0.0/255.192.0.0
-no-route = 114.16.0.0/255.240.0.0
-no-route = 114.48.0.0/255.240.0.0
-no-route = 114.64.0.0/255.192.0.0
-no-route = 114.128.0.0/255.240.0.0
-no-route = 114.192.0.0/255.192.0.0
-no-route = 115.0.0.0/255.0.0.0
-no-route = 116.0.0.0/255.0.0.0
-no-route = 117.0.0.0/255.128.0.0
-no-route = 117.128.0.0/255.192.0.0
-no-route = 118.16.0.0/255.240.0.0
-no-route = 118.64.0.0/255.192.0.0
-no-route = 118.128.0.0/255.128.0.0
-no-route = 119.0.0.0/255.128.0.0
-no-route = 119.128.0.0/255.192.0.0
-no-route = 119.224.0.0/255.224.0.0
-no-route = 120.0.0.0/255.192.0.0
-no-route = 120.64.0.0/255.224.0.0
-no-route = 120.128.0.0/255.240.0.0
-no-route = 120.192.0.0/255.192.0.0
-no-route = 121.0.0.0/255.128.0.0
-no-route = 121.192.0.0/255.192.0.0
-no-route = 122.0.0.0/254.0.0.0
-no-route = 124.0.0.0/255.0.0.0
-no-route = 125.0.0.0/255.128.0.0
-no-route = 125.160.0.0/255.224.0.0
-no-route = 125.192.0.0/255.192.0.0
-no-route = 137.59.59.0/255.255.255.0
-no-route = 137.59.88.0/255.255.252.0
-no-route = 139.0.0.0/255.224.0.0
-no-route = 139.128.0.0/255.128.0.0
-no-route = 140.64.0.0/255.240.0.0
-no-route = 140.128.0.0/255.240.0.0
-no-route = 140.192.0.0/255.192.0.0
-no-route = 144.0.0.0/255.248.0.0
-no-route = 144.12.0.0/255.255.0.0
-no-route = 144.48.0.0/255.248.0.0
-no-route = 144.123.0.0/255.255.0.0
-no-route = 144.255.0.0/255.255.0.0
-no-route = 146.196.0.0/255.255.128.0
-no-route = 150.0.0.0/255.255.0.0
-no-route = 150.96.0.0/255.224.0.0
-no-route = 150.128.0.0/255.240.0.0
-no-route = 150.192.0.0/255.192.0.0
-no-route = 152.104.128.0/255.255.128.0
-no-route = 153.0.0.0/255.192.0.0
-no-route = 153.96.0.0/255.224.0.0
-no-route = 157.0.0.0/255.255.0.0
-no-route = 157.18.0.0/255.255.0.0
-no-route = 157.61.0.0/255.255.0.0
-no-route = 157.112.0.0/255.240.0.0
-no-route = 157.144.0.0/255.240.0.0
-no-route = 157.255.0.0/255.255.0.0
-no-route = 159.226.0.0/255.255.0.0
-no-route = 160.19.0.0/255.255.0.0
-no-route = 160.20.48.0/255.255.252.0
-no-route = 160.202.0.0/255.255.0.0
-no-route = 160.238.64.0/255.255.252.0
-no-route = 161.207.0.0/255.255.0.0
-no-route = 162.105.0.0/255.255.0.0
-no-route = 163.0.0.0/255.192.0.0
-no-route = 163.96.0.0/255.224.0.0
-no-route = 163.128.0.0/255.192.0.0
-no-route = 163.192.0.0/255.224.0.0
-no-route = 164.52.0.0/255.255.128.0
-no-route = 166.111.0.0/255.255.0.0
-no-route = 167.139.0.0/255.255.0.0
-no-route = 167.189.0.0/255.255.0.0
-no-route = 167.220.244.0/255.255.252.0
-no-route = 168.160.0.0/255.255.0.0
-no-route = 170.179.0.0/255.255.0.0
-no-route = 171.0.0.0/255.128.0.0
-no-route = 171.192.0.0/255.224.0.0
-no-route = 175.0.0.0/255.128.0.0
-no-route = 175.128.0.0/255.192.0.0
-no-route = 180.64.0.0/255.192.0.0
-no-route = 180.128.0.0/255.128.0.0
-no-route = 182.0.0.0/255.0.0.0
-no-route = 183.0.0.0/255.192.0.0
-no-route = 183.64.0.0/255.224.0.0
-no-route = 183.128.0.0/255.128.0.0
-no-route = 192.124.154.0/255.255.255.0
-no-route = 192.140.128.0/255.255.128.0
-no-route = 195.78.82.0/255.255.254.0
-no-route = 202.0.0.0/255.128.0.0
-no-route = 202.128.0.0/255.192.0.0
-no-route = 202.192.0.0/255.224.0.0
-no-route = 203.0.0.0/255.0.0.0
-no-route = 210.0.0.0/255.192.0.0
-no-route = 210.64.0.0/255.224.0.0
-no-route = 210.160.0.0/255.224.0.0
-no-route = 210.192.0.0/255.224.0.0
-no-route = 211.64.0.0/255.248.0.0
-no-route = 211.80.0.0/255.240.0.0
-no-route = 211.96.0.0/255.248.0.0
-no-route = 211.136.0.0/255.248.0.0
-no-route = 211.144.0.0/255.240.0.0
-no-route = 211.160.0.0/255.248.0.0
-no-route = 216.250.108.0/255.255.252.0
-no-route = 218.0.0.0/255.128.0.0
-no-route = 218.160.0.0/255.224.0.0
-no-route = 218.192.0.0/255.192.0.0
-no-route = 219.64.0.0/255.224.0.0
-no-route = 219.128.0.0/255.224.0.0
-no-route = 219.192.0.0/255.192.0.0
-no-route = 220.96.0.0/255.224.0.0
-no-route = 220.128.0.0/255.128.0.0
-no-route = 221.0.0.0/255.224.0.0
-no-route = 221.96.0.0/255.224.0.0
-no-route = 221.128.0.0/255.128.0.0
-no-route = 222.0.0.0/255.0.0.0
-no-route = 223.0.0.0/255.224.0.0
-no-route = 223.64.0.0/255.192.0.0
-no-route = 223.128.0.0/255.128.0.0
+route = 103.0.0.0/255.0.0.0
+route = 106.0.0.0/255.0.0.0
+route = 107.0.0.0/255.0.0.0
+route = 108.0.0.0/255.0.0.0
+route = 141.0.0.0/255.0.0.0
+route = 153.0.0.0/255.0.0.0
+route = 160.0.0.0/255.0.0.0
+route = 166.0.0.0/255.0.0.0
+route = 17.0.0.0/255.0.0.0
+route = 173.0.0.0/255.0.0.0
+route = 176.0.0.0/255.0.0.0
+route = 178.0.0.0/255.0.0.0
+route = 184.0.0.0/255.0.0.0
+route = 194.0.0.0/255.0.0.0
+route = 198.0.0.0/255.0.0.0
+route = 199.0.0.0/255.0.0.0
+route = 203.0.0.0/255.0.0.0
+route = 204.0.0.0/255.0.0.0
+route = 205.0.0.0/255.0.0.0
+route = 208.0.0.0/255.0.0.0
+route = 209.0.0.0/255.0.0.0
+route = 210.0.0.0/255.0.0.0
+route = 216.0.0.0/255.0.0.0
+route = 3.0.0.0/255.0.0.0
+route = 4.0.0.0/255.0.0.0
+route = 31.0.0.0/255.0.0.0
+route = 46.0.0.0/255.0.0.0
+route = 50.0.0.0/255.0.0.0
+route = 54.0.0.0/255.0.0.0
+route = 61.0.0.0/255.0.0.0
+route = 64.0.0.0/255.0.0.0
+route = 67.0.0.0/255.0.0.0
+route = 68.0.0.0/255.0.0.0
+route = 69.0.0.0/255.0.0.0
+route = 70.0.0.0/255.0.0.0
+route = 72.0.0.0/255.0.0.0
+route = 74.0.0.0/255.0.0.0
+route = 75.0.0.0/255.0.0.0
+route = 76.0.0.0/255.0.0.0
+route = 77.0.0.0/255.0.0.0
+route = 79.0.0.0/255.0.0.0
+route = 8.0.0.0/255.0.0.0
