--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 8443
-#udp-port = 8443
+udp-port = 8443
 
 server-cert = /etc/ocserv/oc_serv_cer.pem
 server-key = /etc/ocserv/oc_serv_key.pem
@@ -12,14 +12,15 @@ pid-file = /var/run/ocserv.pid
 run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
-cert-group-oid = 2.5.4.11
+#cert-group-oid = 2.5.4.11
 isolate-workers = true
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 120
-#output-buffer = 23000
+#test
+output-buffer = 3000
 try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
@@ -41,9 +42,13 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
 
-tunnel-all-dns = true
-dns = 8.8.8.8
-dns = 8.8.4.4
+#tunnel-all-dns = true
+#dns = 8.8.8.8
+#dns = 8.8.4.4
+
+tunnel-all-dns = false
+dns = 202.141.162.123
+dns = 202.141.178.13
 
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
