--- a/ocserv.conf
+++ b/ocserv.conf
@@ -200,7 +200,7 @@ route = 192.192.0.0/255.192.0.0
 route = 193.0.0.0/255.0.0.0
 route = 194.0.0.0/254.0.0.0
 route = 196.0.0.0/252.0.0.0
-route = 200.0.0.0/248.0.0.0
+#route = 200.0.0.0/248.0.0.0
 route = 208.0.0.0/248.0.0.0
 route = 216.0.0.0/254.0.0.0
 route = 218.32.0.0/255.224.0.0
