--- a/ocserv.conf
+++ b/ocserv.conf
@@ -42,13 +42,13 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
 
-#tunnel-all-dns = true
+tunnel-all-dns = false
 #dns = 8.8.8.8
 #dns = 8.8.4.4
 
-tunnel-all-dns = false
-dns = 202.141.162.123
-dns = 202.141.178.13
+#tunnel-all-dns = false
+#dns = 202.141.162.123
+#dns = 202.141.178.13
 
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
