--- a/ocserv.conf
+++ b/ocserv.conf
@@ -43,8 +43,8 @@ ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
 
 tunnel-all-dns = false
-#dns = 8.8.8.8
-#dns = 8.8.4.4
+dns = 8.8.8.8
+dns = 8.8.4.4
 
 #tunnel-all-dns = false
 #dns = 202.141.162.123
