--- a/ocserv.conf
+++ b/ocserv.conf
@@ -46,9 +46,42 @@ tunnel-all-dns = false
 dns = 8.8.8.8
 dns = 8.8.4.4
 
-#tunnel-all-dns = false
-#dns = 202.141.162.123
-#dns = 202.141.178.13
+split-dns = google.com
+split-dns = google
+split-dns = 1e100.net
+split-dns = ggpht.com
+split-dns = googleusercontent.com
+split-dns = gstatic.com
+split-dns = goo.gl
+split-dns = googleadservices.com
+split-dns = googleapps.com
+split-dns = googleapis.com
+split-dns = googleapis.cn
+split-dns = doubleclick.com
+split-dns = appspot.com
+split-dns = blogger.com
+split-dns = blogspot.com
+split-dns = youtube.com
+split-dns = youtu.be
+split-dns = youtubegaming.com
+split-dns = yt.be
+split-dns = ytimg.com
+split-dns = youtubeeducation.com
+split-dns = youtube-nocookie.com
+split-dns = googlevideo.com
+split-dns = googlesyndication.com
+split-dns = gmail.com
+split-dns = google-analytics.com
+split-dns = keyhole.com
+split-dns = googlescholar.com
+split-dns = googlemaps.com
+split-dns = gv.com
+split-dns = adsense.com
+split-dns = adwords.com
+split-dns = abc.xyz
+split-dns = example.com
+split-dns = example.com
+
 
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
