--- a/ocserv.conf
+++ b/ocserv.conf
@@ -79,9 +79,108 @@ split-dns = gv.com
 split-dns = adsense.com
 split-dns = adwords.com
 split-dns = abc.xyz
-split-dns = example.com
-split-dns = example.com
+# fb
+split-dns = cdninstagram.com
+split-dns = facebook.br
+split-dns = facebook.com
+split-dns = facebook.design
+split-dns = connect.facebook.net
+split-dns = fb.com
+split-dns = fb.me
+split-dns = fbcdn.net
+split-dns = fbsbx.com
+split-dns = instagram.com
+split-dns = m.me
+split-dns = messenger.com
+split-dns = oculus.com
+split-dns = oculuscdn.com
+split-dns = rocksdb.org
+split-dns = thefacebook.com
+split-dns = whatsapp.com
+split-dns = whatsapp.net
 
+#twitter
+split-dns = ads-twitter.com
+split-dns = periscope.tv
+split-dns = pscp.tv
+split-dns = t.co
+split-dns = tellapart.com
+split-dns = tweetdeck.com
+split-dns = twimg.com
+split-dns = twitpic.com
+split-dns = twitter.com
+split-dns = twitteroauth.com
+split-dns = twitterstat.us
+split-dns = vine.co
+split-dns = twtrdns.net
+
+#dp
+split-dns = db.tt
+split-dns = dropbox.com
+split-dns = dropboxapi.com
+split-dns = dropboxusercontent.com
+split-dns = dropboxbusiness.com
+split-dns = dropboxforums.com
+split-dns = dropboxforum.com
+split-dns = dropboxinsiders.com
+split-dns = dropboxmail.com
+split-dns = dropboxpartners.com
+split-dns = dropboxstatic.com
+split-dns = dropbox.zendesk.com
+split-dns = getdropbox.com
+split-dns = paper.dropbox.com
+split-dns = dropbox-dns.com
+
+#
+split-dns = rfa.org
+split-dns = vimeo.com
+split-dns = vimeocdn.com
+split-dns = nytimes.com
+split-dns = nytcn.me
+split-dns = tynt.com
+split-dns = nytstyle.com
+split-dns = nyt.com
+split-dns = bbc.com
+split-dns = bbc.co.uk
+split-dns = bbci.co.uk
+split-dns = bbc.in
+split-dns = voachinese.com
+split-dns = voanews.com
+split-dns = wikipedia.org
+split-dns = tumblr.com
+split-dns = stel.com
+split-dns = t.me
+split-dns = tdesktop.com
+split-dns = telegram.me
+split-dns = telegra.ph
+split-dns = telegram.org
+split-dns = soundcloud.com
+split-dns = sndcdn.com
+split-dns = reddit.com
+split-dns = redditstatic.com
+split-dns = redditmedia.com
+split-dns = redd.it
+
+#netflix
+split-dns = netflix.com
+split-dns = netflix.net
+split-dns = nflxext.com
+split-dns = nflximg.com
+split-dns = nflximg.net
+split-dns = nflxvideo.net
+#github
+split-dns = github.com
+split-dns = githubapp.com
+split-dns = githubassets.com
+split-dns = github.io
+split-dns = githubusercontent.com
+split-dns = git.io
+
+split-dns = duckduckgo.com
+split-dns = duck.com
+
+split-dns = linkedin.com
+split-dns = licdn.com
 
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
