--- a/ocserv.conf
+++ b/ocserv.conf
@@ -42,6 +42,22 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
 
+split-dns = db.tt
+split-dns = dropbox.com
+split-dns = dropboxapi.com
+split-dns = dropboxusercontent.com
+split-dns = dropboxbusiness.com
+split-dns = dropboxforums.com
+split-dns = dropboxforum.com
+split-dns = dropboxinsiders.com
+split-dns = dropboxmail.com
+split-dns = dropboxpartners.com
+split-dns = dropboxstatic.com
+split-dns = dropbox.zendesk.com
+split-dns = getdropbox.com
+split-dns = paper.dropbox.com
+split-dns = dropbox-dns.com
+
 tunnel-all-dns = false
 dns = 8.8.8.8
 dns = 8.8.4.4
