--- a/ocserv.conf
+++ b/ocserv.conf
@@ -57,6 +57,39 @@ split-dns = dropbox.zendesk.com
 split-dns = getdropbox.com
 split-dns = paper.dropbox.com
 split-dns = dropbox-dns.com
+split-dns = google.com
+split-dns = google
+split-dns = 1e100.net
+split-dns = ggpht.com
+split-dns = googleusercontent.com
+split-dns = gstatic.com
+split-dns = goo.gl
+split-dns = googleadservices.com
+split-dns = googleapps.com
+split-dns = googleapis.com
+split-dns = googleapis.cn
+split-dns = doubleclick.com
+split-dns = appspot.com
+split-dns = blogger.com
+split-dns = blogspot.com
+split-dns = youtube.com
+split-dns = youtu.be
+split-dns = youtubegaming.com
+split-dns = yt.be
+split-dns = ytimg.com
+split-dns = youtubeeducation.com
+split-dns = youtube-nocookie.com
+split-dns = googlevideo.com
+split-dns = googlesyndication.com
+split-dns = gmail.com
+split-dns = google-analytics.com
+split-dns = keyhole.com
+split-dns = googlescholar.com
+split-dns = googlemaps.com
+split-dns = gv.com
+split-dns = adsense.com
+split-dns = adwords.com
+split-dns = abc.xyz
 
 tunnel-all-dns = false
 dns = 8.8.8.8
