--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 8443
-udp-port = 8443
+#udp-port = 8443
 
 server-cert = /etc/ocserv/oc_serv_cer.pem
 server-key = /etc/ocserv/oc_serv_key.pem
@@ -13,14 +13,14 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = true
+isolate-workers = false
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 120
 #test
-output-buffer = 23000
+output-buffer = 100
 try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
