--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 8443
-#udp-port = 8443
+udp-port = 8443
 
 server-cert = /etc/ocserv/oc_serv_cer.pem
 server-key = /etc/ocserv/oc_serv_key.pem
