--- a/ocserv.conf
+++ b/ocserv.conf
@@ -40,11 +40,7 @@ predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
 
-#test
-dtls-legacy = false
-
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
