--- a/ocserv.conf
+++ b/ocserv.conf
@@ -41,7 +41,7 @@ ping-leases = false
 cisco-client-compat = true
 
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-match-tls-dtls-ciphers = true
+#match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
