--- a/ocserv.conf
+++ b/ocserv.conf
@@ -13,7 +13,7 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = false
+isolate-workers = true
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
@@ -34,14 +34,14 @@ deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
 use-utmp = true
-use-occtl = true
+#use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
 
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-#match-tls-dtls-ciphers = true
+match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
