--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 8443
-udp-port = 8443
+#udp-port = 8443
 
 server-cert = /etc/ocserv/oc_serv_cer.pem
 server-key = /etc/ocserv/oc_serv_key.pem
@@ -21,7 +21,7 @@ dpd = 90
 mobile-dpd = 120
 
 #test
-output-buffer = 30000
+output-buffer = 20000
 try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
@@ -39,9 +39,7 @@ device = ocserv
 predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
-
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-#match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
