--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,12 +1,9 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
-
 tcp-port = 8443
-#udp-port = 8443
-
+udp-port = 8443
 server-cert = /etc/ocserv/oc_serv_cer.pem
 server-key = /etc/ocserv/oc_serv_key.pem
 ca-cert = /etc/ocserv/ca_cer.pem
-
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
 run-as-user = nobody
@@ -18,9 +15,7 @@ max-clients = 25
 max-same-clients = 5
 keepalive = 32400
 dpd = 90
-mobile-dpd = 120
-
-#test
+mobile-dpd = 800
 output-buffer = 20000
 try-mtu-discovery = true
 compression = false
@@ -34,11 +29,12 @@ deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
 use-utmp = true
-#use-occtl = true
+use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
+dtls-legacy = true
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 
 ipv4-network = 192.168.18.0
