--- a/ocserv.conf
+++ b/ocserv.conf
@@ -34,8 +34,9 @@ device = ocserv
 predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
-dtls-legacy = true
+#dtls-legacy = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
