--- a/ocserv.conf
+++ b/ocserv.conf
@@ -35,7 +35,7 @@ predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
 #dtls-legacy = false
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
