--- a/ocserv.conf
+++ b/ocserv.conf
@@ -16,8 +16,8 @@ max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
-output-buffer = 20000
-try-mtu-discovery = true
+#output-buffer = 20000
+try-mtu-discovery = false
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
