--- a/ocserv.conf
+++ b/ocserv.conf
@@ -10,7 +10,7 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = true
+isolate-workers = false
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
