--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,9 +1,9 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 tcp-port = 8443
 udp-port = 8443
-server-cert = /etc/ocserv/oc_serv_cer.pem
-server-key = /etc/ocserv/oc_serv_key.pem
-ca-cert = /etc/ocserv/ca_cer.pem
+server-cert = /etc/ocserv/server-cert.pem
+server-key = /etc/ocserv/server-key.pem
+ca-cert = /etc/ocserv/ca-cert.pem
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
 run-as-user = nobody
@@ -16,7 +16,7 @@ max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
-#output-buffer = 20000
+output-buffer = 20000
 try-mtu-discovery = false
 compression = false
 no-compress-limit = 256
@@ -35,7 +35,7 @@ predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
 #dtls-legacy = false
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
