--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,7 +17,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 800
 output-buffer = 20000
-try-mtu-discovery = false
+try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
@@ -34,8 +34,8 @@ device = ocserv
 predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
-#dtls-legacy = false
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+dtls-legacy = true
+%tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #match-tls-dtls-ciphers = true
 
 ipv4-network = 192.168.18.0
