--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,7 +17,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 800
 output-buffer = 20000
-try-mtu-discovery = true
+try-mtu-discovery = false
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
@@ -35,9 +35,10 @@ predictable-ips = false
 ping-leases = false
 cisco-client-compat = true
 dtls-legacy = true
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 #match-tls-dtls-ciphers = true
+default-domain = wangyi.cf
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
