--- a/ocserv.conf
+++ b/ocserv.conf
@@ -16,8 +16,8 @@ max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
-output-buffer = 20000
-try-mtu-discovery = false
+#output-buffer = 20000
+try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
@@ -33,10 +33,9 @@ use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
-cisco-client-compat = true
-dtls-legacy = true
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 #match-tls-dtls-ciphers = true
 default-domain = wangyi.cf
 
@@ -219,3 +218,6 @@ route = 223.0.0.0/255.192.0.0
 route = 223.96.0.0/255.224.0.0
 route = 223.128.0.0/255.128.0.0
 route = 224.0.0.0/224.0.0.0
+
+cisco-client-compat = true
+dtls-legacy = true
