--- a/ocserv.conf
+++ b/ocserv.conf
@@ -4,6 +4,7 @@ udp-port = 8443
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 ca-cert = /etc/ocserv/ca-cert.pem
+dh-params = /etc/ocserv/dh.pem
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
 run-as-user = nobody
