--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,10 +1,10 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 tcp-port = 8443
-udp-port = 18443
+udp-port = 8443
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 ca-cert = /etc/ocserv/ca-cert.pem
-dh-params = /etc/ocserv/dh.pem
+#dh-params = /etc/ocserv/dh.pem
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
 run-as-user = nobody
@@ -34,20 +34,15 @@ use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
-
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
 dtls-legacy = true
-
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
-
 tunnel-all-dns = true
 dns = 8.8.8.8
 dns = 8.8.4.4
-
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
 route = 11.0.0.0/255.0.0.0
