--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,6 +17,7 @@ max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
+switch-to-tcp-timeout = 25
 #output-buffer = 20000
 try-mtu-discovery = true
 compression = false
