--- a/ocserv.conf
+++ b/ocserv.conf
@@ -38,11 +38,13 @@ ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 cisco-client-compat = true
 dtls-legacy = true
+
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
-tunnel-all-dns = true
+tunnel-all-dns = false
 dns = 8.8.8.8
 dns = 8.8.4.4
+
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
 route = 11.0.0.0/255.0.0.0
