--- a/ocserv.conf
+++ b/ocserv.conf
@@ -30,14 +30,14 @@ persistent-cookies = true
 deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
-use-utmp = true
-use-occtl = true
+#use-utmp = true
+#use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 cisco-client-compat = true
-dtls-legacy = true
+dtls-legacy = false
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
