--- a/ocserv.conf
+++ b/ocserv.conf
@@ -36,7 +36,7 @@ device = ocserv
 predictable-ips = false
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-cisco-client-compat = true
+cisco-client-compat = false
 dtls-legacy = false
 
 ipv4-network = 192.168.18.0
