--- a/ocserv.conf
+++ b/ocserv.conf
@@ -36,8 +36,8 @@ device = ocserv
 predictable-ips = false
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-cisco-client-compat = false
-dtls-legacy = false
+cisco-client-compat = true
+dtls-legacy = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
