--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,6 +1,6 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 tcp-port = 8443
-udp-port = 8443
+#udp-port = 8443
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 ca-cert = /etc/ocserv/ca-cert.pem
