--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,10 +1,12 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
+
 tcp-port = 443
 udp-port = 443
+
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 ca-cert = /etc/ocserv/ca-cert.pem
-#dh-params = /etc/ocserv/dh.pem
+
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
 run-as-user = nobody
@@ -17,8 +19,8 @@ max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
-switch-to-tcp-timeout = 25
-#output-buffer = 20000
+#switch-to-tcp-timeout = 25
+output-buffer = 20000
 try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
