--- a/ocserv.conf
+++ b/ocserv.conf
@@ -32,8 +32,8 @@ persistent-cookies = true
 deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
-#use-utmp = true
-#use-occtl = true
+use-utmp = true
+use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
