--- a/ocserv.conf
+++ b/ocserv.conf
@@ -21,12 +21,12 @@ dpd = 90
 mobile-dpd = 800
 #switch-to-tcp-timeout = 25
 output-buffer = 20000
-try-mtu-discovery = true
+try-mtu-discovery = false
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
-idle-timeout = 1200
-mobile-idle-timeout = 1200
+#idle-timeout = 1200
+#mobile-idle-timeout = 1200
 cookie-timeout = 43200
 persistent-cookies = true
 deny-roaming = false
