--- a/ocserv.conf
+++ b/ocserv.conf
@@ -13,15 +13,15 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = false
+isolate-workers = true
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
 #switch-to-tcp-timeout = 25
-output-buffer = 20000
-try-mtu-discovery = false
+#output-buffer = 20
+try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
