--- a/ocserv.conf
+++ b/ocserv.conf
@@ -13,14 +13,14 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = true
+isolate-workers = false
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
 #switch-to-tcp-timeout = 25
-output-buffer = 20000
+#output-buffer = 20000
 try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
