--- a/ocserv.conf
+++ b/ocserv.conf
@@ -37,9 +37,10 @@ use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
+match-tls-dtls-ciphers = true
 #dtls-legacy = true
 
 ipv4-network = 192.168.18.0
