--- a/ocserv.conf
+++ b/ocserv.conf
@@ -39,7 +39,7 @@ predictable-ips = false
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-cisco-client-compat = true
+#cisco-client-compat = true
 match-tls-dtls-ciphers = true
 #dtls-legacy = true
 
