--- a/ocserv.conf
+++ b/ocserv.conf
@@ -13,7 +13,7 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = false
+isolate-workers = true
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
@@ -37,8 +37,8 @@ use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
 #dtls-legacy = false
