--- a/ocserv.conf
+++ b/ocserv.conf
@@ -13,7 +13,7 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = true
+isolate-workers = false
 max-clients = 25
 max-same-clients = 5
 keepalive = 32400
@@ -38,7 +38,8 @@ device = ocserv
 predictable-ips = false
 ping-leases = false
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+tls-priorities = "SECURE256:%PROFILE_MEDIUM:%SERVER_PRECEDENCE:-ECDHE-ECDSA:-DHE-RSA:-RSA:-AES-256-CBC:-CAMELLIA-256-CBC:-VERS-TLS1.1:-VERS-TLS1.0:-VERS-DTLS1.0:-VERS-DTLS1.2"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
 #dtls-legacy = false
