--- a/ocserv.conf
+++ b/ocserv.conf
@@ -42,7 +42,7 @@ ping-leases = false
 tls-priorities = "SECURE256:%PROFILE_MEDIUM:%SERVER_PRECEDENCE:-ECDHE-ECDSA:-DHE-RSA:-RSA:-AES-256-CBC:-CAMELLIA-256-CBC:-VERS-TLS1.1:-VERS-TLS1.0:-VERS-DTLS1.0:-VERS-DTLS1.2"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
-#dtls-legacy = false
+dtls-legacy = false
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
