--- a/ocserv.conf
+++ b/ocserv.conf
@@ -37,12 +37,11 @@ use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-tls-priorities = "SECURE256:%PROFILE_MEDIUM:%SERVER_PRECEDENCE:-ECDHE-ECDSA:-DHE-RSA:-RSA:-AES-256-CBC:-CAMELLIA-256-CBC:-VERS-TLS1.1:-VERS-TLS1.0:-VERS-DTLS1.0:-VERS-DTLS1.2"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
-dtls-legacy = false
+#dtls-legacy = false
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
