--- a/ocserv.conf
+++ b/ocserv.conf
@@ -40,7 +40,7 @@ ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = false
-match-tls-dtls-ciphers = true
+match-tls-dtls-ciphers = false
 #dtls-legacy = false
 
 ipv4-network = 192.168.18.0
