--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
-tcp-port = 4443
-udp-port = 4443
+tcp-port = 443
+#udp-port = 4443
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
@@ -20,7 +20,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 800
 #switch-to-tcp-timeout = 25
-#output-buffer = 50
+output-buffer = 500
 try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
