--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 443
-#udp-port = 4443
+udp-port = 443
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
@@ -39,8 +39,8 @@ predictable-ips = false
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-cisco-client-compat = false
-match-tls-dtls-ciphers = false
+cisco-client-compat = true
+#match-tls-dtls-ciphers = false
 #dtls-legacy = false
 
 ipv4-network = 192.168.18.0
