--- a/ocserv.conf
+++ b/ocserv.conf
@@ -41,7 +41,7 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = false
-#dtls-legacy = false
+dtls-legacy = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
