--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 443
-#udp-port = 443
+udp-port = 3389
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
