--- a/ocserv.conf
+++ b/ocserv.conf
@@ -39,9 +39,9 @@ predictable-ips = false
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-cisco-client-compat = true
+cisco-client-compat = false
 #match-tls-dtls-ciphers = false
-dtls-legacy = true
+dtls-legacy = false
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
