--- a/ocserv.conf
+++ b/ocserv.conf
@@ -21,7 +21,7 @@ dpd = 90
 mobile-dpd = 800
 #switch-to-tcp-timeout = 25
 output-buffer = 500
-try-mtu-discovery = true
+try-mtu-discovery = false
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
@@ -37,11 +37,11 @@ use-occtl = true
 device = ocserv
 predictable-ips = false
 ping-leases = false
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-cisco-client-compat = false
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+cisco-client-compat = true
 #match-tls-dtls-ciphers = false
-dtls-legacy = false
+dtls-legacy = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
