--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 443
-udp-port = 3389
+#udp-port = 3389
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
@@ -21,7 +21,7 @@ dpd = 90
 mobile-dpd = 800
 #switch-to-tcp-timeout = 25
 output-buffer = 500
-try-mtu-discovery = false
+try-mtu-discovery = true
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
