--- a/ocserv.conf
+++ b/ocserv.conf
@@ -34,7 +34,7 @@ rekey-time = 43200
 rekey-method = ssl
 use-utmp = true
 use-occtl = true
-device = ocserv
+device = vpns
 predictable-ips = false
 ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
