--- a/ocserv.conf
+++ b/ocserv.conf
@@ -21,7 +21,8 @@ dpd = 90
 mobile-dpd = 800
 #switch-to-tcp-timeout = 25
 output-buffer = 500
-try-mtu-discovery = true
+#avoid reconnect when starting
+try-mtu-discovery = false
 compression = false
 no-compress-limit = 256
 auth-timeout = 40 
@@ -45,7 +46,7 @@ dtls-legacy = true
 
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
-tunnel-all-dns = false
+tunnel-all-dns = true
 dns = 8.8.8.8
 dns = 8.8.4.4
 
