--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "plain[passwd=/etc/ocserv/ocpasswd]"
 
 tcp-port = 443
-udp-port = 3389
+udp-port = 443
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
@@ -14,8 +14,8 @@ run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
 isolate-workers = false
-max-clients = 25
-max-same-clients = 5
+max-clients = 0
+max-same-clients = 0
 keepalive = 32400
 dpd = 90
 mobile-dpd = 800
@@ -34,7 +34,7 @@ deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
 use-utmp = true
-use-occtl = true
+use-occtl = false
 device = vpns
 predictable-ips = false
 ping-leases = false
