--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,9 +17,9 @@ isolate-workers = false
 max-clients = 0
 max-same-clients = 0
 keepalive = 32400
-dpd = 90
-mobile-dpd = 800
-#switch-to-tcp-timeout = 25
+dpd = 30
+mobile-dpd = 60
+switch-to-tcp-timeout = 25
 output-buffer = 500
 #avoid reconnect when starting
 try-mtu-discovery = false
