--- a/ocserv.conf
+++ b/ocserv.conf
@@ -16,11 +16,13 @@ cert-user-oid = 2.5.4.3
 isolate-workers = false
 max-clients = 0
 max-same-clients = 0
+
 keepalive = 32400
 dpd = 30
 mobile-dpd = 60
 switch-to-tcp-timeout = 25
 output-buffer = 500
+
 #avoid reconnect when starting
 try-mtu-discovery = false
 compression = false
@@ -28,22 +30,23 @@ no-compress-limit = 256
 auth-timeout = 40 
 #idle-timeout = 1200
 #mobile-idle-timeout = 1200
-cookie-timeout = 43200
+session-timeout = 86400
 persistent-cookies = true
 deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
 use-utmp = true
 use-occtl = false
-device = vpns
 predictable-ips = false
 ping-leases = false
+
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = false
 dtls-legacy = true
 
+device = vpns
 ipv4-network = 192.168.18.0
 ipv4-netmask = 255.255.255.0
 tunnel-all-dns = true
