--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,23 +17,25 @@ isolate-workers = false
 max-clients = 0
 max-same-clients = 0
 
-keepalive = 32400
+#timeout
+session-timeout = 86400
+idle-timeout = 1200
+mobile-idle-timeout = 2400
+keepalive = 30
+auth-timeout = 40 
 dpd = 30
 mobile-dpd = 60
 switch-to-tcp-timeout = 25
+persistent-cookies = true
+deny-roaming = false
+rekey-time = 43200
 output-buffer = 500
 
 #avoid reconnect when starting
 try-mtu-discovery = false
 compression = false
-no-compress-limit = 256
-auth-timeout = 40 
-#idle-timeout = 1200
-#mobile-idle-timeout = 1200
-session-timeout = 86400
-persistent-cookies = true
-deny-roaming = false
-rekey-time = 43200
+#no-compress-limit = 256
+
 rekey-method = ssl
 use-utmp = true
 use-occtl = false
