--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,7 +17,7 @@ isolate-workers = false
 max-clients = 0
 max-same-clients = 0
 
-#timeout
+# timeout 
 session-timeout = 86400
 idle-timeout = 1200
 mobile-idle-timeout = 2400
@@ -26,16 +26,16 @@ auth-timeout = 40
 dpd = 30
 mobile-dpd = 60
 switch-to-tcp-timeout = 25
-persistent-cookies = true
+persistent-cookies = false
+cookie-timeout = 300
 deny-roaming = false
 rekey-time = 43200
-output-buffer = 500
 
 #avoid reconnect when starting
 try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
-
+output-buffer = 500
 rekey-method = ssl
 use-utmp = true
 use-occtl = false
