--- a/ocserv.conf
+++ b/ocserv.conf
@@ -21,12 +21,12 @@ max-same-clients = 0
 session-timeout = 86400
 idle-timeout = 1200
 mobile-idle-timeout = 2400
-keepalive = 30
-auth-timeout = 40 
+keepalive = 32400
+#auth-timeout = 40 
 dpd = 30
 mobile-dpd = 60
 switch-to-tcp-timeout = 25
-persistent-cookies = false
+persistent-cookies = true
 cookie-timeout = 300
 deny-roaming = false
 rekey-time = 43200
