--- a/ocserv.conf
+++ b/ocserv.conf
@@ -20,15 +20,15 @@ max-same-clients = 0
 
 # timeout 
 session-timeout = 86400
-idle-timeout = 1200
-mobile-idle-timeout = 2400
-keepalive = 32400
+#idle-timeout = 1200
+#mobile-idle-timeout = 2400
+#keepalive = 32400
 #auth-timeout = 40 
-dpd = 30
-mobile-dpd = 30
-switch-to-tcp-timeout = 25
+dpd = 90
+mobile-dpd = 1800
+#switch-to-tcp-timeout = 25
 persistent-cookies = true
-cookie-timeout = 300
+#cookie-timeout = 300
 deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
@@ -38,8 +38,8 @@ try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
 output-buffer = 500
-use-utmp = true
-use-occtl = false
+#use-utmp = true
+#use-occtl = false
 predictable-ips = false
 ping-leases = false
 
