--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,5 +1,5 @@
-#auth = "plain[passwd=/etc/ocserv/ocpasswd]"
-auth = "certificate"
+auth = "plain[passwd=/etc/ocserv/ocpasswd]"
+#auth = "certificate"
 
 tcp-port = 443
 udp-port = 443
