--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,5 +1,5 @@
-auth = "plain[passwd=/etc/ocserv/ocpasswd]"
-#auth = "certificate"
+#auth = "plain[passwd=/etc/ocserv/ocpasswd]"
+auth = "certificate"
 
 tcp-port = 443
 udp-port = 443
@@ -19,7 +19,7 @@ max-clients = 0
 max-same-clients = 0
 
 # timeout 
-session-timeout = 86400
+#session-timeout = 86400
 #idle-timeout = 1200
 #mobile-idle-timeout = 2400
 #keepalive = 32400
@@ -27,7 +27,7 @@ session-timeout = 86400
 dpd = 90
 mobile-dpd = 1800
 #switch-to-tcp-timeout = 25
-persistent-cookies = true
+persistent-cookies = false
 #cookie-timeout = 300
 deny-roaming = false
 rekey-time = 43200
