--- a/ocserv.conf
+++ b/ocserv.conf
@@ -19,16 +19,16 @@ max-clients = 0
 max-same-clients = 0
 
 # timeout 
-session-timeout = 86400
-idle-timeout = 1200
-mobile-idle-timeout = 2400
-keepalive = 32400
+#session-timeout = 86400
+#idle-timeout = 1200
+#mobile-idle-timeout = 2400
+#keepalive = 32400
 #auth-timeout = 40 
 dpd = 90
 mobile-dpd = 30
 #switch-to-tcp-timeout = 25
 persistent-cookies = true
-cookie-timeout = 300
+cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
